Implemented DI based service to send notifications.

--- a/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
+++ b/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
@@ -8,9 +8,10 @@
             <renderContentEditor role:require="Standalone or ContentManagement">
                 <processor patch:before="*[1]" type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.RegisterSignalRScripts, RealtimeNotifier.Foundation.SignalR">
                     <scripts hint="list:addScriptResource">
+                        <resource>/scripts/notify.min.js</resource>
                         <resource>/scripts/jquery.signalr-2.4.1.min.js</resource>
                         <resource>/signalr/hubs</resource>
-                        <resource>/scripts/connect-signalr.js</resource>
+                        <resource>/scripts/connect-signalr.js</resource>                        
                     </scripts>
                 </processor>
             </renderContentEditor>
@@ -23,5 +24,8 @@
         <settings>
             <setting name="Owin.AssertStageMarkers" value="false" />
         </settings>
+        <services>
+            <configurator type="RealtimeNotifier.Foundation.SignalR.Configurator.RegisterDependencies, RealtimeNotifier.Foundation.SignalR" />
+        </services>
     </sitecore>
 </configuration>
