--- a/src/Foundation/SignalR/website/RealtimeNotifier.Foundation.SignalR.csproj
+++ b/src/Foundation/SignalR/website/RealtimeNotifier.Foundation.SignalR.csproj
@@ -50,6 +50,12 @@
       <HintPath>..\..\..\..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.4.1\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Extensions.DependencyInjection, Version=3.1.5.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Extensions.DependencyInjection.3.1.5\lib\net461\Microsoft.Extensions.DependencyInjection.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=3.1.5.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.3.1.5\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Owin, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Microsoft.Owin.4.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -120,6 +126,7 @@
     <Content Include="App_Config\Include\Foundation\RealtimeNotifier.Foundation.SignalR.config" />
     <Content Include="Scripts\jquery.signalR-2.4.1.js" />
     <Content Include="Scripts\jquery.signalR-2.4.1.min.js" />
+    <Content Include="Scripts\notify.min.js" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\connect-signalR.js" />
@@ -132,12 +139,15 @@
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurator\RegisterDependencies.cs" />
     <Compile Include="Events\ItemSavedNotification.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="NotificationHub.cs" />
     <Compile Include="Pipelines\OwinInitialize\InitializeSignalR.cs" />
     <Compile Include="Pipelines\RenderContentEditor\RegisterSignalRScripts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ISignalRService.cs" />
+    <Compile Include="Services\SignalService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
