--- a/src/Foundation/SignalR/website/Web.config
+++ b/src/Foundation/SignalR/website/Web.config
@@ -67,6 +67,14 @@
 
       </dependentAssembly>
 
+      <dependentAssembly>
+
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-3.1.5.0" newVersion="3.1.5.0" />
+
+      </dependentAssembly>
+
     </assemblyBinding>
 
   </runtime>
