--- a/src/Foundation/SignalR/website/packages.config
+++ b/src/Foundation/SignalR/website/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.5" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.5" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net48" />
