--- a/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
+++ b/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
@@ -21,9 +21,9 @@
             </renderContentEditor>
         </pipelines>
         <events>
-            <event name="item:saved">
+            <!--<event name="item:saved">
                 <handler type="RealtimeNotifier.Foundation.SignalR.Events.ItemSavedNotification, RealtimeNotifier.Foundation.SignalR" method="OnItemSaved" resolve="true" />
-            </event>
+            </event>-->
         </events>
         <settings>
             <setting name="Owin.AssertStageMarkers" value="false" />
