--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -5,7 +5,9 @@
 
         </pipelines>
         <events>
-
+            <event name="item:saved">
+                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemSavedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
+            </event>
         </events>
     </sitecore>
 </configuration>
