--- a/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
+++ b/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
@@ -7,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FB61A135-633A-4268-AB1C-4ADA7E68FF21}</ProjectGuid>
+    <ProjectGuid>{21CDCD86-C594-4A1F-9CFA-1F89FD0F890B}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RealtimeNotifier.Feature.Gutter</RootNamespace>
-    <AssemblyName>RealtimeNotifier.Feature.Gutter</AssemblyName>
+    <RootNamespace>RealtimeNotifier.Feature.ItemActivities</RootNamespace>
+    <AssemblyName>RealtimeNotifier.Feature.ItemActivities</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -82,12 +82,13 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Config\Include\Feature\RealtimeNotifier.Feature.Gutteer.config" />
+    <Content Include="App_Config\Include\Feature\RealtimeNotifier.Feature.ItemActivities.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gutter\NotificationGutter.cs" />
+    <Compile Include="Events\ItemSavedNotification.cs" />
+    <Compile Include="Models\ItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
