--- a/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
+++ b/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
@@ -7,17 +7,20 @@
             </owin.initialize>
             <renderContentEditor role:require="Standalone or ContentManagement">
                 <processor patch:before="*[1]" type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.RegisterSignalRResources, RealtimeNotifier.Foundation.SignalR">
-                    <scripts hint="list:addScriptResource">
-                        <resource>/scripts/notify.js</resource>
-                        <resource>/scripts/jquery.signalr-2.4.1.min.js</resource>
-                        <resource>/signalr/hubs</resource>
-                        <resource>/scripts/connect-signalr.js</resource>                        
+                    <scripts hint="raw:addScriptResource">
+                        <!--<resource>/scripts/notify.js|1</resource>
+                        <resource>/scripts/jquery.signalr-2.4.1.min.js|2</resource>
+                        <resource>/signalr/hubs|3</resource>
+                        <resource>/scripts/connect-signalr.js|4</resource>-->
+                        <script path="/scripts/notify.js" order="1" />
+                        <script path="/scripts/jquery.signalr-2.4.1.min.js" order="2" />
+                        <script path="/signalr/hubs" order="3" />
+                        <script path="/scripts/connect-signalr.js" order="4" />
                     </scripts>
                     <styles hint="list:addStyleResource">
                         <resource>/styles/signalr.css</resource>
                     </styles>
                 </processor>
-                <processor type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.ContentEditorOpened, RealtimeNotifier.Foundation.SignalR" resolve="true"/>
             </renderContentEditor>
         </pipelines>
         <settings>
