Added gutter image while item save

--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -2,7 +2,13 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
     <sitecore>
         <pipelines>
-
+            <renderContentEditor role:require="Standalone or ContentManagement">
+                <processor type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.RegisterSignalRResources, RealtimeNotifier.Foundation.SignalR">
+                    <scripts hint="raw:addScriptResource">
+                        <script path="/scripts/realtime-notifications-item-activities.js" order="6" />
+                    </scripts>
+                </processor>
+            </renderContentEditor>
         </pipelines>
         <events>
             <event name="item:saved">
