--- a/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
+++ b/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Config\Include\Feature\RealtimeNotifier.Feature.ItemActivities.config" />
+    <Content Include="Scripts\realtime-notifications-item-activities.js" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Web.config" />
   </ItemGroup>
@@ -102,7 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pipelines\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Foundation\SignalR\website\RealtimeNotifier.Foundation.SignalR.csproj">
