Implemented notification dropdown with number badge on bell icon.

--- a/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
+++ b/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
@@ -8,10 +8,6 @@
             <renderContentEditor role:require="Standalone or ContentManagement">
                 <processor patch:before="*[1]" type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.RegisterSignalRResources, RealtimeNotifier.Foundation.SignalR">
                     <scripts hint="raw:addScriptResource">
-                        <!--<resource>/scripts/notify.js|1</resource>
-                        <resource>/scripts/jquery.signalr-2.4.1.min.js|2</resource>
-                        <resource>/signalr/hubs|3</resource>
-                        <resource>/scripts/connect-signalr.js|4</resource>-->
                         <script path="/scripts/notify.js" order="1" />
                         <script path="/scripts/jquery.signalr-2.4.1.min.js" order="2" />
                         <script path="/signalr/hubs" order="3" />
@@ -19,6 +15,7 @@
                     </scripts>
                     <styles hint="list:addStyleResource">
                         <resource>/styles/signalr.css</resource>
+                        <resource>/styles/font-awesome.min.css</resource>
                     </styles>
                 </processor>
             </renderContentEditor>
