--- a/src/Feature/WorkBoxActivities/website/RealtimeNotifier.Feature.WorkBoxActivities.csproj
+++ b/src/Feature/WorkBoxActivities/website/RealtimeNotifier.Feature.WorkBoxActivities.csproj
@@ -90,15 +90,23 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\PublishProfiles\Local.pubxml.user" />
+    <Content Include="Scripts\realtime-notifications-workbox-activities.js" />
     <Content Include="sitecore\shell\Applications\GlobalHeader.ascx" />
+    <Content Include="App_Config\Include\Feature\RealtimeNotifier.Feature.WorkBoxActivities.config" />
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\PublishActivityNotification.cs" />
+    <Compile Include="Models\RejectActivityNotification.cs" />
+    <Compile Include="Models\SubmitActivityNotification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sitecore\shell\Applications\GlobalHeader.ascx.cs">
       <DependentUpon>GlobalHeader.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Workflow\Action\OnPublishAction.cs" />
+    <Compile Include="Workflow\Action\OnRejectAction.cs" />
+    <Compile Include="Workflow\Action\OnSubmitAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -109,6 +117,13 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Foundation\SignalR\website\RealtimeNotifier.Foundation.SignalR.csproj">
+      <Project>{8d7bcc13-f02c-4a88-ba90-7e1603897fa8}</Project>
+      <Name>RealtimeNotifier.Foundation.SignalR</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
