Added item deleted and renamed event notification

--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -14,6 +14,12 @@
             <event name="item:saved">
                 <handler type="RealtimeNotifier.Feature.ItemActivities.ItemSavedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
             </event>
+            <event name="item:deleted">
+                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemDeletedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemDeleted" resolve="true" />
+            </event>
+            <event name="item:renamed">
+                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemRenamedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemRenamed" resolve="true" />
+            </event>
         </events>
     </sitecore>
 </configuration>
