--- a/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
+++ b/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
@@ -88,6 +88,8 @@
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\ItemRenamedNotification.cs" />
+    <Compile Include="Events\ItemDeletedNotification.cs" />
     <Compile Include="Events\ItemSavedNotification.cs" />
     <Compile Include="Models\ItemModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
