Item publishing processor done

--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -9,6 +9,9 @@
                     </scripts>
                 </processor>
             </renderContentEditor>
+            <publish>
+                <processor patch:after="*[@type='Sitecore.Publishing.Pipelines.Publish.ProcessQueue, Sitecore.Kernel']" type="RealtimeNotifier.Feature.ItemActivities.Pipelines.CustomPublishProcessor, RealtimeNotifier.Feature.ItemActivities"/>
+            </publish>
         </pipelines>
         <events>
             <event name="item:saved">
