Changed the notification message function call location

--- a/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
+++ b/src/Feature/ItemActivities/RealtimeNotifier.Feature.ItemActivities.csproj
@@ -101,9 +101,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pipelines\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Foundation\SignalR\website\RealtimeNotifier.Foundation.SignalR.csproj">
       <Project>{8d7bcc13-f02c-4a88-ba90-7e1603897fa8}</Project>
