Issue fixes and enhancements.

--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -15,7 +15,8 @@
         </pipelines>
         <events>
             <event name="item:saved">
-                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemSavedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
+                <handler type="RealtimeNotifier.Feature.ItemActivities.Events.ItemCreatedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
+                <handler type="RealtimeNotifier.Feature.ItemActivities.Events.ItemSavedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
             </event>
             <event name="item:deleted">
                 <handler type="RealtimeNotifier.Feature.ItemActivities.ItemDeletedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemDeleted" resolve="true" />
