--- a/src/Feature/UserActivities/website/App_Config/Include/Feature/RealtimeNotifier.Feature.UserActivities.config
+++ b/src/Feature/UserActivities/website/App_Config/Include/Feature/RealtimeNotifier.Feature.UserActivities.config
@@ -8,7 +8,7 @@
                         <script path="/scripts/realtime-notifications-user-activities.js" order="5" />
                     </scripts>
                 </processor>
-                <processor type="RealtimeNotifier.Feature.UserActivities.Pipelines.RenderContentEditor.ContentEditorOpened, RealtimeNotifier.Feature.UserActivities" resolve="true"/>
+                <!--<processor type="RealtimeNotifier.Feature.UserActivities.Pipelines.RenderContentEditor.ContentEditorOpened, RealtimeNotifier.Feature.UserActivities" resolve="true"/>-->
             </renderContentEditor>
         </pipelines>
     </sitecore>
