Some clean up work done.

--- a/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
+++ b/src/Foundation/SignalR/website/App_Config/Include/Foundation/RealtimeNotifier.Foundation.SignalR.config
@@ -6,6 +6,7 @@
                 <processor type="RealtimeNotifier.Foundation.SignalR.Pipelines.OwinInitialize.InitializeSignalR, RealtimeNotifier.Foundation.SignalR" patch:after="processor[@type='Sitecore.Owin.Pipelines.Initialize.SetLoggerFactory, Sitecore.Owin']" resolve="true" />
             </owin.initialize>
             <renderContentEditor role:require="Standalone or ContentManagement">
+                <!--Register the processor to bind the SignalR. Make sure you register this processor before the Sitecore.Owin.Pipelines.Initialize.StageMarker processor-->
                 <processor patch:before="*[1]" type="RealtimeNotifier.Foundation.SignalR.Pipelines.RenderContentEditor.RegisterSignalRResources, RealtimeNotifier.Foundation.SignalR">
                     <scripts hint="raw:addScriptResource">
                         <script path="/scripts/notify.js" order="1" />
@@ -20,9 +21,6 @@
                 </processor>
             </renderContentEditor>
         </pipelines>
-        <settings>
-            <setting name="Owin.AssertStageMarkers" value="false" />
-        </settings>
         <services>
             <configurator type="RealtimeNotifier.Foundation.SignalR.Configurator.RegisterDependencies, RealtimeNotifier.Foundation.SignalR" />
         </services>
