--- a/src/Foundation/SignalR/website/RealtimeNotifier.Foundation.SignalR.csproj
+++ b/src/Foundation/SignalR/website/RealtimeNotifier.Foundation.SignalR.csproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <Compile Include="Configurator\RegisterDependencies.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Resource.cs" />
     <Compile Include="NotificationHub.cs" />
     <Compile Include="Pipelines\OwinInitialize\InitializeSignalR.cs" />
     <Compile Include="Pipelines\RenderContentEditor\RegisterSignalRScripts.cs" />
