Added try catch, removed unnecessary files.

--- a/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
+++ b/src/Feature/ItemActivities/App_Config/Include/Feature/RealtimeNotifier.Feature.ItemActivities.config
@@ -19,10 +19,10 @@
                 <handler type="RealtimeNotifier.Feature.ItemActivities.Events.ItemSavedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemSaved" resolve="true" />
             </event>
             <event name="item:deleted">
-                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemDeletedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemDeleted" resolve="true" />
+                <handler type="RealtimeNotifier.Feature.ItemActivities.Events.ItemDeletedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemDeleted" resolve="true" />
             </event>
             <event name="item:renamed">
-                <handler type="RealtimeNotifier.Feature.ItemActivities.ItemRenamedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemRenamed" resolve="true" />
+                <handler type="RealtimeNotifier.Feature.ItemActivities.Events.ItemRenamedNotification, RealtimeNotifier.Feature.ItemActivities" method="OnItemRenamed" resolve="true" />
             </event>
         </events>
     </sitecore>
